# GridShift

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  railway.toml  requirements.txt
backend/: config.py  database.py  main.py
backend/migrations/: env.py
backend/models/: certificate.py  energy.py  schedule.py
backend/routers/: certificates.py  energy.py  schedule.py
backend/schemas/: certificate.py  energy.py  schedule.py
backend/services/: cert_chain.py  energy_model.py  optimizer.py  scheduler.py  weather_client.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/cards/: KpiCard.tsx  OptimizeButton.tsx
frontend/src/components/certificates/: CertificateDetail.tsx  CertificateList.tsx
frontend/src/components/charts/: CarbonSavingsBar.tsx  EnergyFlowChart.tsx  PriceHeatmap.tsx  ScheduleGantt.tsx
frontend/src/components/layout/: Sidebar.tsx  TopBar.tsx
frontend/src/hooks/: useCertificates.ts  useEnergyForecast.ts  useSchedule.ts
frontend/src/pages/: CertificatesPage.tsx  Dashboard.tsx  SchedulePage.tsx
frontend/src/types/: index.ts
infra/: gridshift-api.service  gridshift-ui.service  gridshift.conf
scripts/: run_optimizer.py  seed_history.py  verify_chain.py
tests/: test_cert_chain.py  test_energy_model.py  test_optimizer.py
